--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
  </head>
 <body>
+    <h2> ❖ Let's start the game: Find the matching pairs! ❖ </h2>
 <section id="main">
 
 </section>
 
+<h4> ❖   Developed by Safa Ahmad Al-Jmain❖ </h4> 
 
 
 
